--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <h1>Ainaz Jamshidi <font_family: arial> </h1>
       <h3>Welcome!</h3>
       <hr>
-<!--       <img src="logo.jpg"  alt="Person" style="width:50px height: 50px">
- -->    </div>
+  <img src="/Figure_10.png"  alt="Person" style="width:50px height: 50px">
+ </div>
     <div class="w3-padding-32">
       <a href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Home</a>
       <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">My Work</a>
